--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
   <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsiveAbout.css">
+
 </head>
 <body class="homeBody">
 
@@ -75,68 +77,69 @@
   </div>
   <!-- PAGE CONTENT -->
   <div style="z-index: 10;" class="skew-cc"></div>
-  <div class="info-outer-container">
-    <div class="info-1">
-      <div class="info-container">
-        <div class="info-background-2">
-          <h2>Vår affärsidé.</h2>
-          <h3 style="font-size: 18px;">Noll tillsatser av något slag. IT'S A MUST.</h3>
-          <p style="font-size: 15px;">Vi tror på att en äppelmust ska vara just en äppelmust. Inte en flaska med massa tillsatser för att efterlikna en smak av äpplen. En äppelmust ska vara en smak av naturen.</p>
-          <p style="font-size: 15px;">Därför är IT'S A MUSTs äppelmust gjord helt på vildvuxna äpplen från svenska trädgårdar.</p>
-          <p style="font-size: 15px;">Du kan dricka IT'S A MUSTs äppelmust med gott samvete med kunskapen av att vår must ör producerad på äpplen som annars hade gått förlorade denna säsong. Äpplen från din grannes vackra äppelträd som din granne inte haft tid eller varit intresserad av att plocka; och <b><a style="text-decoration: none; color: white;" href="#blåmärksfrukt">blåmärksfrukt</a></b> från dina lokala livsmedelsbutiker som annars skulle gått till spillo.</p>
-          <p style="font-size: 15px;">Så tacka din granne när du nästa gång öppnar en äppelmust från oss för den naturliga och underbart goda smak. Självklart ska du även ge dig själv beröm för att du precis bidragit till att minska matsvinnet i Sverige genom att ha utnyttjat din trogne grannes äpplen.</p>
+  <div class="middle-container">
+    <div class="info-outer-container">
+      <div class="info-1">
+        <div id="container1" class="info-container info-container-2">
+          <div class="info-background-2">
+            <h2>Vår affärsidé.</h2>
+            <h3 style="font-size: 18px;">Noll tillsatser av något slag. IT'S A MUST.</h3>
+            <p style="font-size: 15px;">Vi tror på att en äppelmust ska vara just en äppelmust. Inte en flaska med massa tillsatser för att efterlikna en smak av äpplen. En äppelmust ska vara en smak av naturen.</p>
+            <p style="font-size: 15px;">Därför är IT'S A MUSTs äppelmust gjord helt på vildvuxna äpplen från svenska trädgårdar.</p>
+            <p style="font-size: 15px;">Du kan dricka IT'S A MUSTs äppelmust med gott samvete med kunskapen av att vår must ör producerad på äpplen som annars hade gått förlorade denna säsong. Äpplen från din grannes vackra äppelträd som din granne inte haft tid eller varit intresserad av att plocka; och <b><a style="text-decoration: none; color: white;" href="#blåmärksfrukt">blåmärksfrukt</a></b> från dina lokala livsmedelsbutiker som annars skulle gått till spillo.</p>
+            <p style="font-size: 15px;">Så tacka din granne när du nästa gång öppnar en äppelmust från oss för den naturliga och underbart goda smak. Självklart ska du även ge dig själv beröm för att du precis bidragit till att minska matsvinnet i Sverige genom att ha utnyttjat din trogne grannes äpplen.</p>
+          </div>
+        </div>
+        <div id="container2" class="info-container info-container-2">
+          <div class="info-background">
+            <h2>Vår resa.</h2>
+            <p style="font-size: 16px;">
+              <em>Vi hade en dröm. En dröm där vi gjorde allt vi kunde för att minska fruktsvinnet. Vi är otroligt tacksamma och stolta över att kunna förverkliga den drömmen.
+            </em></p>
+            <br>
+            <p style="font-size: 15px;">Vi har samarbete med flertalet livsmedelsbutiker runt om i närområdet där vi får så kallad blåmärksfrukt. Vi har även plockat otroliga mängder räddad frukt från trädgårdar och äppelträd runt om i Västerort.</p>
+            <br>
+            <p style="font-size: 15px;">
+              Med frukten samlad omvandlade vi den till en läcker och oslagbart god äppelmust. Du har väl sett vår Limited Edition Julmust? Äppelmust med smak av kanel; otroligt god!!
+            </p>
+
+            <h2>Våra samarbetspartners.</h2>
+            <p style="font-size: 15px;">Vi får självklart inte glömma att tacka vår underbara samarbetspartner; Humlegårdens Ekolager, som har sponsrat och hjälpt oss igenom denna resa. Utan dem skulle det inte vara möjligt.</p>
+            <p style="font-size: 15px;">Vi vill självklart också tacka alla andra samarbetspartners, livsmedelsbutiker och äppeldonatorer som vi inte kunnat klara oss utan i denna resa.</p>
+          </div>
         </div>
       </div>
-      <div class="info-container">
-        <div class="info-background">
-          <h2>Vår resa.</h2>
-          <p style="font-size: 16px;">
-            <em>Vi hade en dröm. En dröm där vi gjorde allt vi kunde för att minska fruktsvinnet. Vi är otroligt tacksamma och stolta över att kunna förverkliga den drömmen.
-          </em></p>
-          <br>
-          <p style="font-size: 15px;">Vi har samarbete med flertalet livsmedelsbutiker runt om i närområdet där vi får så kallad blåmärksfrukt. Vi har även plockat otroliga mängder räddad frukt från trädgårdar och äppelträd runt om i Västerort.</p>
-          <br>
-          <p style="font-size: 15px;">
-            Med frukten samlad omvandlade vi den till en läcker och oslagbart god äppelmust. Du har väl sett vår Limited Edition Julmust? Äppelmust med smak av kanel; otroligt god!!
-          </p>
-
-          <h2>Våra samarbetspartners.</h2>
-          <p style="font-size: 15px;">Vi får självklart inte glömma att tacka vår underbara samarbetspartner; Humlegårdens Ekolager, som har sponsrat och hjälpt oss igenom denna resa. Utan dem skulle det inte vara möjligt.</p>
-          <p style="font-size: 15px;">Vi vill självklart också tacka alla andra samarbetspartners, livsmedelsbutiker och äppeldonatorer som vi inte kunnat klara oss utan i denna resa.</p>
+    </div>
+    <!--  -->
+    <div style="z-index: 10;" class="skew-c"></div>
+    <!-- 2ND ROW -->
+    <div class="info-outer-container-2">
+      <div id="tagpåmust" class="info-1">
+        <div id="container3" class="info-container info-container-2">
+          <div id="blåmärksfrukt" class="info-background">
+            <h2>Vad är blåmärksfrukt?</h2>
+            <p style="font-size: 15px;">Blåmärksfrukt är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
+            <h2>Vad för priser har ni?</h2>
+            <h3 style="font-size: 18px;">Vi har mycket konkurrenskraftiga priser. </h3>
+            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
+            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
+            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
+          </div>
+        </div>
+        <div id="container4" class="info-container info-container-2">
+          <div class="info-background-2">
+            <h2 >Hur får jag tag på musten?</h2>
+            <p style="font-size: 15px;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
+            <br>
+            <h2>Kontakta oss.</h2>
+            <p style="font-size: 15px;">Har du något på hjärtat? Kanske undrar du hur vi kan ha så konkurrenskraftiga priser? Eller så kanske du undrar hur vi får till det lilla extra i vår must som skiljer oss från andra? Oavsett vad det gäller tveka inte att höra av dig!</p>
+            <p>E-post: <b><a style="text-decoration: none; color: white;" href="mailto: info.itsamust@gmail.com">itsamust.uf@gmail.com</a></b></p>
+            <p>Instagram: <b>@<a style="text-decoration: none; color: white;" href="https://www.instagram.com/itsamust.uf/" target="_blank">itsamust.uf</a></b></p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <!--  -->
-  <div style="z-index: 10;" class="skew-c"></div>
-  <!-- 2ND ROW -->
-  <div class="info-outer-container-2">
-    <div id="tagpåmust" class="info-1">
-      <div class="info-container">
-        <div id="blåmärksfrukt" class="info-background">
-          <h2>Vad är blåmärksfrukt?</h2>
-          <p style="font-size: 15px;">Blåmärksfrukt är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
-          <h2>Vad för priser har ni?</h2>
-          <h3 style="font-size: 18px;">Vi har mycket konkurrenskraftiga priser. </h3>
-          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
-          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
-          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
-        </div>
-      </div>
-      <div class="info-container">
-        <div class="info-background-2">
-          <h2 >Hur får jag tag på musten?</h2>
-          <p style="font-size: 15px;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
-          <br>
-          <h2>Kontakta oss.</h2>
-          <p style="font-size: 15px;">Har du något på hjärtat? Kanske undrar du hur vi kan ha så konkurrenskraftiga priser? Eller så kanske du undrar hur vi får till det lilla extra i vår must som skiljer oss från andra? Oavsett vad det gäller tveka inte att höra av dig!</p>
-          <p>E-post: <b><a style="text-decoration: none; color: white;" href="mailto: info.itsamust@gmail.com">itsamust.uf@gmail.com</a></b></p>
-          <p>Instagram: <b>@<a style="text-decoration: none; color: white;" href="https://www.instagram.com/itsamust.uf/" target="_blank">itsamust.uf</a></b></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
 
 
 
