--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <h1 style="margin-top: 50px;" class="mitten">Hemsidan är för tillfället nere. </h1>
   <h2 style="font-size: 25px;" class="mitten">Hemsidan publiceras seanst 10-12-20.</h2>
   <p class="mitten">Passa på att julshoppa via vår Instagram.</p>
+  <br>
+  <a class="mitten" href="https://www.instagram.com/itsamust.uf/" target="_blank"><b>Klicka här för att komma till vår Instagram.</b></a>
+
 
   <div style="margin-top: 150px;">
     <p class="mitten text-footer">© ITS A MUST UF. 2020</p>
@@ -45,6 +48,9 @@
       .mitten {
         display: flex;
         justify-content: center;
+        color: white;
+      }
+      .mitten:hover {
         color: white;
       }
       .mitten-yttre {
